@@ -175,9 +175,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
   /*
     Set floodfill color.
   */
-  pattern=draw_info->fill_pattern;
-  if ((pattern == (Image *) NULL) &&
-      FuzzyColorMatch(&draw_info->fill,&target,image->fuzz))
+  if (FuzzyColorMatch(&draw_info->fill,&target,image->fuzz))
     return(False);
   floodplane=MagickAllocateMemory(unsigned char *,image->columns*image->rows);
   segment_stack=MagickAllocateMemory(SegmentInfo *,MaxStacksize*sizeof(SegmentInfo));
@@ -189,7 +187,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
   /*
     Push initial segment on stack.
   */
-  SetImageType(image,TrueColorType);
+  image->storage_class=DirectClass;
   x=x_offset;
   y=y_offset;
   start=0;
@@ -222,8 +220,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
         }
       else
         if (FuzzyColorMatch(q,&target,image->fuzz) ||
-            ((pattern == (Image *) NULL) &&
-             FuzzyColorMatch(q,&draw_info->fill,image->fuzz)))
+            FuzzyColorMatch(q,&draw_info->fill,image->fuzz))
           break;
       floodplane[y*image->columns+x]=True;
       *q=draw_info->fill;
@@ -257,8 +254,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
                   }
                 else
                   if (FuzzyColorMatch(q,&target,image->fuzz) ||
-                      ((pattern == (Image *) NULL) &&
-                       FuzzyColorMatch(q,&draw_info->fill,image->fuzz)))
+                      FuzzyColorMatch(q,&draw_info->fill,image->fuzz))
                     break;
                 floodplane[y*image->columns+x]=True;
                 *q=draw_info->fill;
@@ -287,8 +283,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
               }
             else
               if (!FuzzyColorMatch(q,&target,image->fuzz) &&
-                  ((pattern != (Image *) NULL) || 
-                   !FuzzyColorMatch(q,&draw_info->fill,image->fuzz)))
+                  !FuzzyColorMatch(q,&draw_info->fill,image->fuzz))
                 break;
             q++;
           }
@@ -296,6 +291,7 @@ MagickExport unsigned int ColorFloodfillImage(Image *image,
       start=x;
     } while (x <= x2);
   }
+  pattern=draw_info->fill_pattern;
   if (pattern == (Image *) NULL)
     for (y=0; y < (long) image->rows; y++)
     {
