@@ -53,6 +53,19 @@
 </tr>
 </table>
 <p>
+2003-05-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/paint.c (ColorFloodfillImage): Fix hang while
+        floodfilling using a pattern image with color similar to the
+        border color.<BR>
+  <LI> coders/modules.mgk: Add missing mappings for PNG8,
+        PNG24, and PNG32.<BR>
+  <LI> VisualMagick/bin/modules.mgk: Add missing mappings for PNG8,
+        PNG24, and PNG32.
+
+</UL>
+<p>
 2003-05-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
