@@ -1,5 +1,8 @@
 2003-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/paint.c (ColorFloodfillImage): Fix hang while
+	floodfilling using a pattern image with color similar to the
+	border color.
 	* coders/modules.mgk: Add missing mappings for PNG8,
 	PNG24, and PNG32.
 	* VisualMagick/bin/modules.mgk: Add missing mappings for PNG8,
